--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@vercel/analytics": "^1.6.1",
     "astro": "^5.16.6",
+    "bun": "^1.3.5",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
